# logovm

./: .flake8  .gitignore  .pylintrc  INSTALL.md  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
docs/: specs.md
examples/: area.lasm  circle_area.logox  counter.lasm  guess.lasm  hello.logox  hello2.logox  pixels.lasm  square.lasm  square.logox  square2.logox  swap.logox
logoasm/: __init__.py  lexer.py  parser.py  symbol_table.py
logovm/: __init__.py  __main__.py  errors.py  loader.py  logoos.py  logovm.py  machine.py  machinery.py  rom.py  turtleos.py
tests/: conftest.py  example_programs.py  test_examples.py
