[project]
name = "logovm"
description = "A collection of tools to teach compiler design and implementation."
readme = "README.md"
version = "0.2.1"
requires-python = ">=3.10"
license = { file="COPYING" }
authors = [
  { name = "Rafael Guterres Jeffman", email = "rafasgj@gmail.com" },
]

keywords = [
  "teaching",
  "compiler",
  "Logo",
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Education",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]

[project.urls]
homepage = "https://github.com/rafasgj/logovm"
repository = "https://github.com/rafasgj/logovm"
issues = "https://github.com/rafasgj/logovm/issues"

[project.optional-dependencies]
png = [ "pillow" ]
jpg = [ "pillow" ]
graphic = [ "pillow" ]
test = [ "pytest", "pytest-cov", "coverage", "tox" ]
lint = [ "black", "pylint", "flake8", "pydocstyle" ]
dev = [ "logovm[test,lint]" ]

[project.scripts]
logovm = "logovm.__main__:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.pytest.ini_options]
minversion = "6.0"
pythonpath = "."

# pylint configuration
[tool.pylint.'BASIC']
max-line-length = 79
max-attributes = 10
good-names = [
    "i", "j", "k",
    "cp", "fp", "sz", "pc",
    "x", "y", "dx", "dy", "sx", "sy", "x0", "y0", "x1", "y1"
]
