# This file is part of LogoVM
#
# Copyright (C) 2022 Rafael Guterres Jeffman
#
# This software is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This software is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this software.  If not, see <https://www.gnu.org/licenses/>.

[metadata]
name = LogoVM
version = 0.1.0
author = Rafael Guterres Jeffman
author-email = rafasgj@gmail.com
home-page = https://github.com/rafasgj/logovm
url = https://github.com/rafasgj/logovm
description = A Logo virtual machine designed to teach compiler implementation.
long-description = file: README.md
long-description-content-type = text/markdown
license = GPLv3
license_files = COPYING
platform = any
keywords = ['Compilers', 'Teaching Tool']
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
project_urls =
    Bug Tracker = https://github.com/rafasgj/logovw/issues
    Changelog = https://github.com/rafasgj/logovm/releases/latest

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    ply >= 3.11
    pillow >= 9.3.0
# test_require =
#    pytest
#    coverage

# [options.package_data]

[options.entry_points]
console_scripts =
  logovm = logovm.__main__:main


[options.extras_require]
dev =
    %(test)s
    setuptools > 50.0
test =
    %(lint)s
    # pytest == 6.2.4
    # coverage
lint =
    black >= 22.8.0
    flake8 == 4.0.1
    pylint == 2.13.7
    wrapt >= 1.14.0
    pydocstyle == 6.0.0
release =
    setuptools > 50.0
    twine

[bdist_wheel]
universal = true

[check]
metadata = true
strict = true

[sdist]
formats = gztar

# Tools

[coverage:run]
omit =
    .tox/*
    .venv/*
    /usr/*
    tests/*
    features/*
    */.local/*

[coverage:report]
show_missing = true
skip_covered = true
skip_empty = true
exclude_lines =
    pragma: no cover
    if False

[pydocstyle]
match-dir = (?!tests)(?!resources)(?!docs)[^\.].*
match = (?!test)(?!setup)(?!parsetab)[^\._].*\.py
inherit = false
ignore = D203, D212
exclude = logoasm/parsetab.py

[flake8]
max-line-length = 79
doctests = True
max-complexity = 10
extend-ignore = E203, W503
exclude =
    .tox
    .venv
    .git
    .eggs
    __pycache__
    docs
    build
    dist
    logoasm/parsetab.py

[gh-actions]
python =
    3.7: py37
    3.8: py38
    3.9: py39
    3.10: py310

[tox:tox]
envlist = {py37,py38,py39,310,311}-{linux,macos}
skipsdist = True
skip_missing_interpreters = True

[testenv]
platform = linux: linux
           macos: darwin
commands =
    {envpython} -m pip install pip --upgrade
    {envpython} -m pip install -e .[lint]
    black --check .
    flake8 setup.py logovm logoasm
    pydocstyle setup.py logovm logoasm
    pylint setup.py logovm logoasm
    # {envpython} -m pip install -e .[test]
    # coverage run -m behave
    # coverage report

